--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*******************************************
+
+ Author: Anders Rochester
+ Description: Using Flexbox
+
+ ******************************************/
 body, div, a {
     padding:0;
     margin:0;
